[package]
name = "queue-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jackie <wfits@126.com>"]
description = "A Rust queue with reids to execute async task or delay task"
keywords = ["queue","delay","task"]
repository = "https://github.com/jackieit/queue-rs"
readme = "README.md"
license = "MIT"

[dependencies]
redis = { version = "0.26.1", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typetag= "0.2.18"
tracing = "0.1"


[dev-dependencies]
tracing-subscriber = "0.3"